# notifier-hook

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.js
.github/workflows/: release.yml
examples/: basic.js  linux-advanced.js  macos-advanced.js  windows-advanced.js
npm/notifier-hook/: index.d.ts  index.js  package.json
npm/notifier-hook-darwin-arm64/: package.json
npm/notifier-hook-darwin-x64/: package.json
npm/notifier-hook-linux-arm64/: package.json
npm/notifier-hook-linux-x64/: package.json
npm/notifier-hook-win32-arm64/: package.json
npm/notifier-hook-win32-x64/: package.json
src/: ipc.rs  main.rs  output.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: basic.test.js  full.test.js
